tenzir/tests/node/secrets/resolution_failure.txt
error: could not get secret value: no platform configured
 --> node/secrets/resolution_failure.tql:5:22
  |
5 | assert_secret secret=secret("does-not-exist"), expected="nothing"
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
  = note: secret `does-not-exist` failed
